--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,7 @@ $text-primary: #b6b6b6;
 $text-secondary: #ececec;
 $bg-primary: #23232e;
 $bg-secondary: #141418;
+$primary: #074faf;
 
 
 :root{
@@ -12,15 +13,21 @@ $bg-secondary: #141418;
 // .App * {
 //   border: 1px solid gray;
 // }
-
+body {
+  background-image: url('./assets/mountain_bg.jpg') white;
+  background-size: contain;
+}
 .App {
   color: black;
-  background-color: white;
   margin: 0;
   padding: 0;
   max-height: 90vh;
   display: flex;
   flex-direction: column;
+
+  h1 {
+    font-size: 2rem;
+  }
   
 
   .contentWrapper {
@@ -65,7 +72,7 @@ $bg-secondary: #141418;
 
     .navLink:hover {
       color: white;
-      background: steelblue
+      background: $primary
     }
     
   }
@@ -107,7 +114,7 @@ $bg-secondary: #141418;
 
   @media screen and (min-width: 1000px) {
     margin: 3% 10%;
-    max-height: 85vh;
+    max-height: 80vh;
     
     .navWrapper {
       margin: 2% 4%;
@@ -116,7 +123,16 @@ $bg-secondary: #141418;
     }
 
     .cta {
-      margin-top: 10%;
+      margin-top: 5%;
+      button {
+        font-size: 1rem;
+        margin-top: 2%;
+        padding: 1% 2%;
+        border: none;
+        border-radius: 5px;
+        background: $primary;
+        color: white;
+      }
     }
 
   }
