adds img to base64 and some styling

--- a/src/App.scss
+++ b/src/App.scss
@@ -56,9 +56,21 @@ body {
     .projectsWrapper {
       display: flex;
       flex-wrap: wrap;
-      justify-content: space-around;
+      justify-content: space-between;
       .projectCard{
-        margin: 5% 5%;
+        margin: 5% 2%;
+        background: snow;
+        padding: 2%;
+        border-radius: 5px;
+        img {
+          max-width: 75%;
+        }
+      }
+      .projectlinks {
+        a{
+          margin-right: 5%;
+        }
+        
       }
       
     }
@@ -74,7 +86,11 @@ body {
 
       form {
         margin: 5% 2%;
+        .imgSelectDisplay {
+        max-height: 5rem;
+        }
       }
+      
     }
   }
 
@@ -173,7 +189,8 @@ body {
       overflow: auto;
 
       .projectCard {
-        max-width: 40%;
+        min-width: 40%;
+        
       }
 
       .modalBack {
@@ -203,6 +220,9 @@ body {
           justify-content: space-around;
           button {
             margin:3% 5% 0 0;
+          }
+          .imgSelectDisplay {
+            max-width: 75%;
           }
         }
         .modalInput{
@@ -265,6 +285,15 @@ body {
       margin-top: 5%;
       padding-top: 0;
       overflow: auto;
+      .projectCard {
+        max-width: 27%;
+      }
+      .modalBack {
+        max-height: 100%;
+      }
+      .projectModal {
+        top: 0px;
+      }
     }
     .modalOpen {
       overflow: hidden;
