--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
+
 $text-primary: #b6b6b6;
 $text-secondary: #ececec;
 $bg-primary: #23232e;
 $bg-secondary: #141418;
 $primary: #074faf;
+$primary-font: 'Montserrat', sans-serif;
+
 
 
 :root{
@@ -30,6 +35,10 @@ body {
     background-size: 100%
   }
 }
+
+.App * {
+  font-family: $primary-font;
+}
 .App {
   color: black;
   margin: 0;
@@ -40,6 +49,10 @@ body {
 
   h1 {
     font-size: 2rem;
+  }
+
+  h4 {
+    margin-top: 10%;
   }
   
 
@@ -86,6 +99,11 @@ body {
       .projectlinks {
         a{
           margin-right: 5%;
+          text-decoration: none;
+          color: $primary;
+          border: 1px solid $primary;
+          padding: 1%;
+          border-radius: 5px;
         }
         
       }
